# house-finder

./: .gitignore  .mcp.json  CLAUDE.md  README.md  config.yaml  image_extractor.py  main.py  pyproject.toml  render.yaml  review.py  supabase_migration.sql  test_image_extractor.py
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: properties.py  searches.py
backend/app/services/: image_extractor.py  preview.py  scraper.py
backend/app/tasks/: scrape_task.py
backend/tests/: conftest.py  test_image_extractor.py  test_scraper.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  main.tsx  supabaseClient.ts
frontend/src/auth/: AuthProvider.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/: PropertyCard.tsx  PropertyModal.tsx  SearchCard.tsx  SearchForm.tsx
frontend/src/pages/: ReviewPage.tsx  SearchesPage.tsx
templates/: review.html
